First go making stuff JDK8 ready

--- a/annotations/processor/nbproject/project.properties
+++ b/annotations/processor/nbproject/project.properties
@@ -20,6 +20,7 @@ build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
+build.generated.sources.dir=${build.dir}/generated-sources
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
@@ -32,8 +33,10 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/jsfa-proc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+excludes=
 file.reference.designtime.jar=lib/designtime.jar
 file.reference.velocity-1.4.jar=lib/velocity-1.4.jar
+includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Sun_JSF_Annotation_Library.jar}:\
