--- a/annotations/processor/nbproject/project.properties
+++ b/annotations/processor/nbproject/project.properties
@@ -14,7 +14,13 @@
 # SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 #
 
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.args=
+application.title=Sun JSF Annotation Processor
+application.vendor=jonathan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -33,6 +39,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/jsfa-proc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.designtime.jar=lib/designtime.jar
 file.reference.velocity-1.4.jar=lib/velocity-1.4.jar
@@ -46,8 +53,11 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -67,6 +77,7 @@ javadoc.windowtitle=
 # The library definition has always preference over this property.
 libs.DesignTime.classpath=../../../../lib/design-time/designtime.jar
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 project.Sun_JSF_Annotation_Library=../library
 reference.Sun_JSF_Annotation_Library.jar=${project.Sun_JSF_Annotation_Library}/dist/jsfa-lib.jar
