remove javadoc files from being committed
Signed-off-by: Jonathan Coustick <jonathan.coustick@payara.fish>

--- a/annotations/processor/nbproject/project.properties
+++ b/annotations/processor/nbproject/project.properties
@@ -15,9 +15,9 @@
 #
 
 annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
+annotation.processing.enabled.in.editor=true
+annotation.processing.processors.list=com.sun.faces.mirror.FacesAnnotationProcessor
+annotation.processing.run.all.processors=false
 application.args=
 application.title=Sun JSF Annotation Processor
 application.vendor=jonathan
