--- a/annotations/processor/nbproject/project.properties
+++ b/annotations/processor/nbproject/project.properties
@@ -21,6 +21,7 @@ annotation.processing.run.all.processors=false
 application.args=
 application.title=Sun JSF Annotation Processor
 application.vendor=jonathan
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -41,15 +42,19 @@ dist.jar=${dist.dir}/jsfa-proc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.designtime.jar=lib/designtime.jar
-file.reference.velocity-1.4.jar=lib/velocity-1.4.jar
+file.reference.com-sun-rave-propertyeditors.jar=../../webui/lib/creator/com-sun-rave-propertyeditors.jar
+file.reference.designtime.jar=../../webui/lib/creator/designtime.jar
+file.reference.jsfcl.jar=../../webui/lib/creator/jsfcl.jar
+file.reference.velocity-engine-core-2.0.jar=../../webui/lib/annotations/velocity-engine-core-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Sun_JSF_Annotation_Library.jar}:\
-    ${file.reference.velocity-1.4.jar}:\
+    ${java.home}/../lib/tools.jar:\
+    ${file.reference.velocity-engine-core-2.0.jar}:\
     ${file.reference.designtime.jar}:\
-    ${java.home}/../lib/tools.jar
+    ${file.reference.com-sun-rave-propertyeditors.jar}:\
+    ${file.reference.jsfcl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
@@ -79,6 +84,7 @@ libs.DesignTime.classpath=../../../../lib/design-time/designtime.jar
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=epl10_1
 project.Sun_JSF_Annotation_Library=../library
 reference.Sun_JSF_Annotation_Library.jar=${project.Sun_JSF_Annotation_Library}/dist/jsfa-lib.jar
 run.classpath=\
