--- a/woodstock-example/pom.xml
+++ b/woodstock-example/pom.xml
@@ -62,16 +62,15 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>com.sun.woodstock.dependlibs</groupId>
-            <artifactId>prototype</artifactId>
+            <groupId>com.sun.woodstock.external</groupId>
+            <artifactId>dojo</artifactId>
+            <version>${project.version}</version>
             <scope>runtime</scope>
-            <version>1.7.3</version>
         </dependency>
         <dependency>
             <groupId>com.sun.woodstock.dependlibs</groupId>
-            <artifactId>dojo-ajax-nodemo</artifactId>
+            <artifactId>prototype</artifactId>
             <scope>runtime</scope>
-            <version>1.12.4</version>
         </dependency>
     </dependencies>
 </project>
