--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <dojo.version>1.15.0</dojo.version>
+        <commons-fileupload.version>1.4</commons-fileupload.version>
     </properties>
 
     <licenses>
@@ -282,10 +283,9 @@
                 <version>4.0.0.M1</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-fileupload2</artifactId>
-                <classifier>jakarta</classifier>
-                <version>2.0-SNAPSHOT</version>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>${commons-fileupload.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.woodstock.dependlibs</groupId>
