--- a/woodstock-external/dojo/pom.xml
+++ b/woodstock-external/dojo/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2019 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2019, 2020 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -17,16 +17,17 @@
 
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.glassfish.woodstock.external</groupId>
         <artifactId>woodstock-external</artifactId>
         <version>5.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>dojo</artifactId>
+
     <name>Dojo JS Repackaged</name>
 
     <build>
@@ -80,10 +81,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                    <configuration>
-                        <classesDirectory>${project.build.directory}/dojo</classesDirectory>
-                    </configuration>
-                </plugin>
+                <configuration>
+                    <classesDirectory>${project.build.directory}/dojo</classesDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
