--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 <!--
 
     Copyright (c) 2019, 2020 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2020 Payara Services Ltd.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -118,7 +119,7 @@
             <dependency>
                 <groupId>jakarta.servlet</groupId>
                 <artifactId>jakarta.servlet-api</artifactId>
-                <version>5.0.0-M1</version>
+                <version>5.0.0</version>
             </dependency>
             <dependency>
                 <groupId>jakarta.servlet.jsp</groupId>
