Convert taglib with the JSP spec to the one with the Jakarta Faces
Signed-off-by: hs536 <sawamura.hiroki@fujitsu.com>

--- a/woodstock-dt/src/main/resources/com/sun/faces/mirror/generator/FacesConfig.template
+++ b/woodstock-dt/src/main/resources/com/sun/faces/mirror/generator/FacesConfig.template
@@ -14,10 +14,10 @@
         <el-resolver>${name}</el-resolver>
 #end
 #foreach ($name in $propertyResolverNameSet)
-        <property-resolver>${name}</property-resolver>
+        <el-resolver>${name}</el-resolver>
 #end
 #foreach ($name in $variableResolverNameSet)
-        <variable-resolver>${name}</variable-resolver>
+        <el-resolver>${name}</el-resolver>
 #end
     </application>
 #foreach ($componentInfo in $componentInfoSet)
