--- a/woodstock-dt/src/main/resources/com/sun/faces/mirror/generator/FacesConfig.template
+++ b/woodstock-dt/src/main/resources/com/sun/faces/mirror/generator/FacesConfig.template
@@ -3,21 +3,14 @@
 <!-- This file was generated automatically on ${date}. -->
 
 <faces-config
-    xmlns="http://java.sun.com/xml/ns/javaee"
+    xmlns="https://jakarta.ee/xml/ns/jakartaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-    http://java.sun.com/xml/ns/javaee/web-facesconfig_2_0.xsd"
-    version="2.0">
+    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-facesconfig_4_0.xsd"
+    version="4.0">
 
     <application>
 #foreach ($name in $javaeeResolverNameSet)
         <el-resolver>${name}</el-resolver>
-#end
-#foreach ($name in $propertyResolverNameSet)
-        <property-resolver>${name}</property-resolver>
-#end
-#foreach ($name in $variableResolverNameSet)
-        <variable-resolver>${name}</variable-resolver>
 #end
     </application>
 #foreach ($componentInfo in $componentInfoSet)
