--- a/woodstock-webui-jsf/pom.xml
+++ b/woodstock-webui-jsf/pom.xml
@@ -105,7 +105,7 @@
                 <configuration>
                     <compilerArgs combine.children="append">
                         <arg>-Ataglibdoc=${basedir}/tag-descriptions.xml</arg>
-                        <arg>-Ataglibdoc.out=META-INF/webui-jsf.tld</arg>
+                        <arg>-Ataglibdoc.out=META-INF/webuijsf.taglib.xml</arg>
                         <arg>-Agenerate.designtime=false</arg>
                         <arg>-Agenerate.runtime=true</arg>
                         <arg>-Anamespace.prefix=webuijsf</arg>
